Adding unit tests and test module, with corresponding bug fixes found by tests.

--- a/kaggle-titanic/titanic.ipynb
+++ b/kaggle-titanic/titanic.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "1c8f8e2d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "<module 'preprocessing' from '/mnt/d/LinuxHome/repos/ml-models/kaggle-titanic/preprocessing.py'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2334,6 +2334,8 @@
    "metadata": {},
    "source": [
     "## Error Analysis\n",
+    "\n",
+    "TODO: This section was botched because I had a major bug in compute_error_analysis_matrices.  I will come back in and redo it, possibly resulting in new checkpoints and maybe even a better score.  All sections below will be affected.  None of the checkpoitns will be affected, but new checkpoints might be created if other column changes are found by more accurate error analysis.\n",
     "\n",
     "Run this after training a model and see how the tables look with that set of hyperparameters.\n",
     "\n",
