Moving machine learning stuff into subfolder.

--- a/machine_learning/kaggle_titanic/titanic.ipynb
+++ b/machine_learning/kaggle_titanic/titanic.ipynb
@@ -16,11 +16,11 @@
     "import importlib\n",
     "import sys\n",
     "\n",
-    "import common.checks as checks\n",
-    "import common.visualization as visualization\n",
-    "import common.datasets as datasets\n",
-    "import common.models as models\n",
-    "import common.error_analysis as error_analysis\n",
+    "import machine_learning.common.checks as checks\n",
+    "import machine_learning.common.visualization as visualization\n",
+    "import machine_learning.common.datasets as datasets\n",
+    "import machine_learning.common.models as models\n",
+    "import machine_learning.common.error_analysis as error_analysis\n",
     "\n",
     "import preprocessing"
    ]
