Fixing lint errors.

--- a/machine_learning/kaggle_titanic/titanic.ipynb
+++ b/machine_learning/kaggle_titanic/titanic.ipynb
@@ -16,11 +16,11 @@
     "import importlib\n",
     "import sys\n",
     "\n",
-    "import machine_learning.common.checks as checks\n",
-    "import machine_learning.common.visualization as visualization\n",
-    "import machine_learning.common.datasets as datasets\n",
-    "import machine_learning.common.models as models\n",
-    "import machine_learning.common.error_analysis as error_analysis\n",
+    "from machine_learning.common import checks\n",
+    "from machine_learning.common import visualization\n",
+    "from machine_learning.common import datasets\n",
+    "from machine_learning.common import models\n",
+    "from machine_learning.common import error_analysis\n",
     "\n",
     "import preprocessing"
    ]
@@ -53,6 +53,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "da0e8e65",
    "metadata": {},
@@ -77,6 +78,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "708d7452",
    "metadata": {},
@@ -107,6 +109,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "902f4e1c",
    "metadata": {},
@@ -115,6 +118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f2dfaf78",
    "metadata": {},
@@ -133,6 +137,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6381e4f1",
    "metadata": {},
@@ -442,6 +447,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b560604b",
    "metadata": {},
@@ -468,6 +474,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9088d801",
    "metadata": {},
@@ -578,6 +585,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0dbcc17f",
    "metadata": {},
@@ -586,6 +594,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "42528aa8",
    "metadata": {},
@@ -616,6 +625,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7967bf2d",
    "metadata": {},
@@ -646,6 +656,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a509eb16",
    "metadata": {},
@@ -880,6 +891,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "958b12c2",
    "metadata": {},
@@ -1121,6 +1133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2903459d",
    "metadata": {},
@@ -1133,6 +1146,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ac9a6973",
    "metadata": {},
@@ -1400,6 +1414,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "268882b5",
    "metadata": {},
@@ -1474,6 +1489,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5236b770",
    "metadata": {},
@@ -1482,6 +1498,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aafd430d",
    "metadata": {},
@@ -1490,6 +1507,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c2753f4",
    "metadata": {},
@@ -1512,6 +1530,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "665788d5",
    "metadata": {},
@@ -1555,6 +1574,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "60ed84f6",
    "metadata": {},
@@ -1576,6 +1596,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "99d5533b",
    "metadata": {},
@@ -1888,6 +1909,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "97a2081c",
    "metadata": {},
@@ -1998,6 +2020,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a11938f1",
    "metadata": {},
@@ -2045,6 +2068,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8eb889d9",
    "metadata": {},
@@ -2061,6 +2085,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03bad339",
    "metadata": {},
@@ -2077,6 +2102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "38cb4703",
    "metadata": {},
@@ -2329,6 +2355,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b6d266e",
    "metadata": {},
@@ -2590,6 +2617,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5e2e06e4",
    "metadata": {},
@@ -2604,6 +2632,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d6190c0b",
    "metadata": {},
@@ -2658,6 +2687,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a3dff3f4",
    "metadata": {},
